# slot_attention_diffusion

./: .dockerignore  .gitignore  Dockerfile  Gemfile  LICENSE  README.md  _config.yml  entrypoint.sh  index.md  pyproject.toml  setup.py
_includes/: header.html
_layouts/: default.html
conditional_diffusion_motion/: __init__.py
conditional_diffusion_motion/data_generation/diffusion_transformer/: generate_trajectories_in_shelf.py
conditional_diffusion_motion/data_generation/slot_attention/: scene_generation.py
conditional_diffusion_motion/diffusion_transformer/datasets/: indirect_motion_with_obstacles_with_cspace_data_module.py  indirect_motion_with_obstacles_without_cond.py
conditional_diffusion_motion/diffusion_transformer/inference/: trajectory_predictor_with_cspace.py
conditional_diffusion_motion/diffusion_transformer/models/: positional_encoding.py
conditional_diffusion_motion/slot_attention/: dataset_slot_attention.py  eval.py  model_slot_attention.py
conditional_diffusion_motion/utils/panda/: create_shelf.py  panda_wrapper.py  plan_and_optimize.py
examples/: comparison_mpd_bench.py  main_shelf_slot_attention.py  metrics.py  motion_generation.py  parser_collision_model.py  test_curobo.py
scripts/table_example/: train_slot.sh
scripts/table_example/training_diffusion/: gpu_config_box_cspace.sh  gpu_config_box_slot_attention.sh  gpu_config_box_without_cond.sh  gpu_config_drawer_cspace.sh  gpu_config_drawer_slot_attention.sh  gpu_config_drawer_without_cond.sh  pf_train_diffusion_cspace.sh  pf_train_diffusion_cspace_drawer.sh  (+4 more)
(+74 files in other folders)
