[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[project]
authors = [{ name = "anon", email = "anonymous4science42@gmail.com" }]
name = "conditional_diffusion_motion"
version = "0.1.0"
description = "Simulate diffusion motion with conditional diffusion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colmpc>=0.3.0",
    "diffusers>=0.35.1",
    "einops>=0.8.1",
    "matplotlib>=3.9.4",
    "meshcat>=0.3.2",
    "natsort>=8.4.0",
    "proxsuite!=0.7.2.post1",
    "pytorch-lightning>=2.5.5",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [ { index = "pytorch-cpu" } ]
torchvision = [ { index = "pytorch-cpu" } ]
